overflow fixed

--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -12,7 +12,6 @@ body {
     padding: 0;
     height: 100vh;
     background-color: $base-color;
-    overflow: hidden;
 }
 
 #level-wrapper {
